@@ -11,14 +11,3 @@ CIAO::RTServer::RTNodeApplication_Impl::~RTNodeApplication_Impl ()
 {
 }
 
-CORBA::Long
-CIAO::RTServer::RTNodeApplication_Impl::init (ACE_ENV_SINGLE_ARG_DECL)
-  ACE_THROW_SPEC ((CORBA::SystemException))
-{
-  this->CIAO::NodeApplication_Impl::init (ACE_ENV_SINGLE_ARG_PARAMETER);
-
-  // We will probably need two ORBs in this process.  One for the
-  // deployment framework, and one for the actual components.
-  return 0;
-}
-
